# cargo-codex

./: Cargo.toml  README.md  justfile
workspace/cargo-codex/: Cargo.toml
workspace/cargo-codex/src/: cli.rs  lib.rs  main.rs
